Adds test CSS reference to index.html's header

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Vingenuity</title>
+		<link rel="stylesheet" type="text/css" href="/css/style-test.css">
 	</head>
 	<body>
 		<nav>
